force-app/main/default/objects/cgcloud__BO_API_Workflow__c/cgcloud__BO_API_Workflow__c.object-meta.xml
<CustomObject>
    <description>This table holds the workflows defined for the Business Object.</description>
    <label>Business Object API Workflow</label>
    <nameField>
        <label>Business Object API Workflow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Object API Workflows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>