force-app/main/default/objects/cgcloud__BO_API_Workflow__c/fields/cgcloud__BO_API__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__BO_API__c</fullName>
    <description>Reference to the Business Object API record.</description>
    <label>Business Object API</label>
    <referenceTo>cgcloud__BO_API__c</referenceTo>
    <relationshipLabel>Workflows</relationshipLabel>
    <relationshipName>Business_Object_API_Workflows</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>