force-app/main/default/objects/cgcloud__BO_API_Workflow__c/fields/cgcloud__Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Description__c</fullName>
    <description>High level description of the workflow.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>