force-app/main/default/objects/cgcloud__BO_API_Workflow__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__BO_API__c</columns>
    <columns>cgcloud__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>